--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
 					$('#tekst').html(tekst);
 					$('#subtitle').html(
-						'<a href="' + ff.url + '">'
+						'Les meir om <a href="' + ff.url + '">'
 						+ ff.title_no + '</a>'
-						+ ' på <a href="http://www.uib.no">UiB</a>'
+						+ ' ved <a href="http://www.uib.no">UiB</a>'
 					);
 					location.hash = ff.id;
 				},
@@ -57,7 +57,7 @@
 
 		function showAbout() {
 			$('#subtitle').html("");
-			$('#tekst').html('Denne vesle webappen er laga med <a href="http://data.uib.no/">opne data frå UiB</a>? Opne data er maskinlesbare data som kan brukast fritt. Appen er laga av ein tidlegare UiB-student, <a href="http://twitter.com/livarb/">Livar Bergheim</a>.');
+			$('#tekst').html('Denne vesle webappen er laga med <a href="http://data.uib.no/">opne data frå UiB</a>? Opne data er maskinlesbare data som kan brukast fritt. Appen er laga av ein tidlegare UiB-student, <a href="http://twitter.com/livarb/">Livar Bergheim</a>. Berre 84 av 196 studieprogram ved UiB har ein slik funfact-tekst.');
 		}		
         </script>
 
@@ -84,13 +84,15 @@
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            // (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            // function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            // e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            // e.src='//www.google-analytics.com/analytics.js';
-            // r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            // ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-463806-14', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
     </body>
 </html>
