Added proper reference to NLOD-licence for open data. Updated About-text.

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
 		}
 
 		function showAbout() {
-			$('#subtitle').html("");
-			$('#tekst').html('Denne vesle webappen er laga med <a href="http://data.uib.no/">opne data frå UiB</a>? Opne data er maskinlesbare data som kan brukast fritt. Appen er laga av ein tidlegare UiB-student, <a href="http://twitter.com/livarb/">Livar Bergheim</a>. Berre 84 av 196 studieprogram ved UiB har ein slik funfact-tekst.');
+			$('#tekst').html('Denne vesle webappen er laga med <a href="http://data.uib.no/">opne data frå UiB</a>? Appen er laga av ein tidlegare UiB-student, <a href="http://twitter.com/livarb/">Livar Bergheim</a>. Berre 84 av 196 studieprogram ved UiB har ein slik funfact-tekst pr. 13/4. <a href="https://github.com/livarb/uib-visste-du">Kjeldekoden er tilgjengeleg på Github</a>.');
+			$('#subtitle').html(
+				'Inneholder data under <a href="http://data.norge.no/">Norsk lisens for offentlige data (NLOD)</a> tilgjengeliggjort av <a href="http://data.uib.no/">Universitetet i Bergen</a>'
+				);
 		}		
         </script>
 
