--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <meta property="og:url" content="http://breim.net/livar/uib-visste-du/" />
+        <meta property="og:title" content="Visste du at...?" />
+        <meta property="og:description" content="Tilfeldige fun facts frå Universitetet i Bergen." />
+        <meta property="og:locale" content="nn_NO" />
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 		<link rel="stylesheet" href="style.css" />
 
