* Polished about-text. * Changed about-link to bottom-left corner for better viewing on mobile.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
 		}
 
 		function showAbout() {
-			$('#tekst').html('<ul><li>Denne vesle webappen er laga med <a href="http://data.uib.no/">opne data frå UiB</a> <li>Appen er laga av ein tidlegare UiB-student, <a href="http://twitter.com/livarb/">Livar Bergheim</a>. <li>Berre 84 av 196 studieprogram ved UiB har ein slik funfact-tekst pr. 13/4. <li><a href="https://github.com/livarb/uib-visste-du">Kjeldekoden er tilgjengeleg på Github</a>.</ul>');
+			$('#tekst').html(
+				'<ul><li>Denne vesle webappen er laga med <a href="http://data.uib.no/">opne data frå UiB</a>'
+				+ '<li>84 av 196 studieprogram ved UiB har ein slik funfact-tekst pr. 13. april.'
+				+ '<li>Appen er laga av ein tidlegare UiB-student, <a href="http://twitter.com/livarb/">Livar Bergheim</a>.' 
+				+ '<li><a href="https://github.com/livarb/uib-visste-du">Kjeldekoden er tilgjengeleg på Github</a>.</ul>');
 			$('#subtitle').html(
 				'Inneholder data under <a href="http://data.norge.no/">Norsk lisens for offentlige data (NLOD)</a> tilgjengeliggjort av <a href="http://data.uib.no/">Universitetet i Bergen</a>'
 				);
