Removed word funfact, as not all facts are that funny.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <meta property="og:url" content="http://breim.net/livar/uib-visste-du/" />
         <meta property="og:title" content="Visste du at...?" />
-        <meta property="og:description" content="Tilfeldige fun facts frå Universitetet i Bergen." />
+        <meta property="og:description" content="Tilfeldige fakta frå Universitetet i Bergen sine studieprogram." />
         <meta property="og:locale" content="nn_NO" />
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
@@ -65,7 +65,8 @@
 		function showAbout() {
 			$('#tekst').html(
 				'<ul><li>Denne vesle webappen er laga med <a href="http://data.uib.no/">opne data frå UiB</a>'
-				+ '<li>84 av 196 studieprogram ved UiB har ein slik funfact-tekst pr. 13. april.'
+				+ '<li>Tekstane er henta frå UiB sin informasjon om studieprogram.<br/>'
+				+ '84 av 196 studieprogram ved UiB har ein slik visste-du-tekst pr. 13. april.'
 				+ '<li>Appen er laga av ein tidlegare UiB-student, <a href="http://twitter.com/livarb/">Livar Bergheim</a>.' 
 				+ '<li><a href="https://github.com/livarb/uib-visste-du">Kjeldekoden er tilgjengeleg på Github</a>.</ul>');
 			$('#subtitle').html(
